<resources>
    <string name="app_name">MiniProjet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
    </string-array>

    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>
    <string name="title_activity_drawer">drawer</string>


    <string name="contact">Mes contacts</string>

    <string name="hint_first_name">First Name</string>

    <string name="hint_last_name">Last Name</string>

    <string name="hint_email">Email Address</string>

    <string name="hint_age">Age</string>

    <string name="hint_phone">Phone</string>

    <string name="error_message_first_name">Donner votre nom</string>

    <string name="error_message_last_name">Donner votre prénom</string>

    <string name="error_message_email">Donner votre Email</string>

    <string name="error_message_age">Donner votre age</string>

    <string name="error_message_phone">Donner votre phone</string>

    <string name="err_msg_email">Donner une addresse Email valide</string>

    <string name="err_msg_password">Donner votre password</string>

    <string name="err_msg_name">Donner votre nom</string>

    <string name="err_msg_not_same_password">Not the same password</string>

    <string name="add">Add</string>

</resources>